css/index.scss
---
---
html, body {
    // overflow: hidden;
    margin: 0;
}
body {
    font-family: 'Open Sans', 'Helvetica Neue', 'Hiragino Sans GB', 'LiHei Pro', Arial, sans-serif;
    color: #333;
    background: url('/background.jpg');
}
#wrapper {
    position: absolute;
    left: 0;
    width: 100%; //320px;
    text-align: center;
    top: 50%;
    left: 50%;
    margin-left: -50%;
    margin-top: -160px;
    -webkit-user-select: none;  
    -moz-user-select: none;
    user-select: none;
}

#icon-link {
    font-size: 30px;
    letter-spacing: 5px;
}

h1 {
    font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif;
    font-weight: 700;
    font-size: 30px;
    letter-spacing: 9px;
    text-transform: uppercase;
    margin: 12px 0;
    left: 4px;
}
h2 {
    color: #999;
    font-weight: normal;
    font-size: 15px;
    letter-spacing: .12em;
    margin-bottom: 30px;
    left: 3px;
}
h1, h2 {
    position: relative;
}
p {
    font-size: 14px;
    line-height: 2em;
    margin: 0;
    letter-spacing: 2px;
}
canvas {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
}
a {
    color: #999;
    text-decoration: none;
    transition: color .2s ease;
}
a:hover {
    color: #f33;
}

.post {
  position: absolute;
  top: 40%;
  left: 20%;
}

.post-list {
    position: absolute;
    left: 0;
    width: 100%;
    text-align: center;
    top: 80%;
    left: 50%;
    margin-left: -50%;
    margin-top: -160px;
}

@media screen and (max-width: 420px) {
  .post-list {
    top: 80%;
  }
}

